[package]
name = "monitor"
version = "0.1.0"
authors = ["Rob Clarke <kumo@kumo.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
# filetime = "0.2"
telegram_notifyrs = "0.1.1"
dotenv="0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
